fix: 番剧播放器 z-index

--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -176,7 +176,8 @@ body>.custom-navbar {
   padding-top: 0 !important;
 }
 
-.playlist-container--left {
+.playlist-container--left,
+.bilibili-player-wrap {
   z-index: 1 !important;
 }
 
